compilateurDeca/src/test/deca/context/valid/sans_objet/arithmetic/add_int.deca
// Description:
//    Sans-Objet
//    affectation
//  
//
// Resultats:
//    compilation bonne
//        
// 
// Historique:
//    cree le 06/01/2026

{
    int a;

    a = 1 + 1;

    
}